# comfyui_bmab

./: README.md  __init__.py  pyproject.toml  requirements.txt
bmab/: __init__.py  override.py  process.py  serverext.py
bmab/nodes/: __init__.py  a1111api.py  basic.py  binder.py  cnloader.py  detailers.py  fill.py  imaging.py  loaders.py  resize.py  sampler.py  toy.py  upscaler.py  utilnode.py  watermark.py
bmab/utils/: __init__.py  color.py  grdino.py  sam.py  yolo.py
resources/examples/: bmab-flux-sample.json  hand-detail-example.json  ic-light-example.json  openpose-hand-detailing-example.json
resources/sample/: sample.json
web/: gemini.js  loadoutputimage.js  previewtext.js  remoteaccess.js
